--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
 
-    <h1>BABY TRUMP DEFENDS AMERICA FROM THE "FAKE NEWS" MEDIA!</h1>
+    <h1>BABY TRUMP</h1>
     
     
     <canvas id="canvas" width="800" height="400"></canvas>
@@ -37,6 +37,7 @@
     <script type="text/javascript" src="./scripts/player.js"></script>
     <script type="text/javascript" src="./scripts/obstacle.js"></script>
     <script type="text/javascript" src="./scripts/clouds.js"></script>
+    <script tyep="text/javascript" src="./scripts/score.js"></script>
 
 </body>
 </html>
