added bonus item

--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
     <script type="text/javascript" src="./scripts/player.js"></script>
     <script type="text/javascript" src="./scripts/obstacle.js"></script>
     <script type="text/javascript" src="./scripts/clouds.js"></script>
+    <script type="text/javascript" src="./scripts/bonus.js"></script>
 
 </body>
 </html>
