working on random news logos

--- a/index.html
+++ b/index.html
@@ -20,7 +20,9 @@
             <img id="flag" src="./images/american-flag.png" alt="American Flag"/>
             <div id="instructions">
                 <h2>Instructions</h2>
-                <p>Use the up and down arrows to move baby Trump and dodge the "Fake News" media.</p>
+                <p>Use arrows to move baby Trump and dodge the "Fake News" media. <br>
+                Collect "Fox News" logos for a bonus. <br>
+                </p>
                 <button id="start-button" class='btn btn-secondary btn-lg'>Start Game</button>
             </div>
             <img id="trump-main" src="./images/left_DonaldTrump.png" alt="Adult Trump"/>
