add lives bonus

--- a/index.html
+++ b/index.html
@@ -41,6 +41,8 @@
     <script type="text/javascript" src="./scripts/obstacle.js"></script>
     <script type="text/javascript" src="./scripts/clouds.js"></script>
     <script type="text/javascript" src="./scripts/bonus.js"></script>
+    <script type="text/javascript" src="./scripts/heart.js"></script>
+
 
 </body>
 </html>
