i don't know what i did

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             <div id="instructions">
                 <h2>Instructions</h2>
                 <p>Use arrows to move Superman and dodge the kryptonite. <br>
-                    Space bar for quick burst forward! <br>
+                    Space bar to teleport forward! <br>
                 Capture Lex Luthor for a bonus. <br>
                 </p>
                 <button id="start-button" class='btn btn-secondary btn-lg'>Start Game</button>
