add user controls keys

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             <img id="superman" src="./images/flying-super-man.png" alt="Superman"/>
             <div id="instructions">
                 <h2>Instructions</h2>
-                <p>Use arrows to move Superman and dodge the kryptonite. <br>
+                <p>Use arrows or (WASD) to move Superman and dodge the kryptonite. <br>
                     Space bar to teleport forward! <br>
                 Capture Lex Luthor for a bonus. <br>
                 </p>
