--- a/splash.html
+++ b/splash.html
@@ -10,7 +10,7 @@
 <body>
 
     <h1>Superman</h1>
-
+        <img id ='logo' src="./images/superman-logo.png" alt="Superman Logo">
 
     <main id="main-container">
             <img id="superman" src="./images/flying-super-man.png" alt="Superman"/>
@@ -18,6 +18,7 @@
                 <h2>Instructions</h2>
                 <p>Use arrows or (WASD) to move Superman and dodge the kryptonite. <br>
                     Space bar to teleport forward! <br>
+                    Collect hearts for extra lives.<br>
                 Capture Lex Luthor for a bonus. <br>
                 </p>
                 <div id="buttons">
