linked all js files

--- a/game.html
+++ b/game.html
@@ -46,6 +46,8 @@
     <script type="text/javascript" src="./scripts/clouds.js"></script>
     <script type="text/javascript" src="./scripts/bonus.js"></script>
     <script type="text/javascript" src="./scripts/heart.js"></script>
+    <script type="text/javascript" src="./scripts/gameover.js"></script>
+    <script type="text/javascript" src="./scripts/index.js"></script>
 
 
 </body>
