--- a/index.html
+++ b/index.html
@@ -21,9 +21,15 @@
                     Collect hearts for extra lives.<br>
                 Capture Lex Luthor for a bonus. <br>
                 </p>
-                <div id="buttons">
-                <button id="start-button" class='btn btn-secondary m-2'>Start Game</button>
-            </div>
+
+                <div class="input-container">
+                    <label for="name" >Name: </label>
+                    <input type="text" id="name" maxlength="24">
+                    <div id="buttons">
+                        <button id="start-button" class='btn btn-secondary m-2'>Start Game</button>
+                    </div>                  
+                </div>
+
             </div>
             <img id="lex" src="./images/Lex.png" alt="Lex Luthor"/>
     </main>
@@ -33,7 +39,8 @@
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js" integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous"></script>
-    <script src="/scripts/index.js"></script>
+    <script type="text/javascript" src="../scripts/index.js"></script>
+    
 
 
 </body>
