--- a/game.html
+++ b/game.html
@@ -17,7 +17,7 @@
 
 
     <main id="main-container">
-            <img id="superman" src="./images/flying-super-man.png" alt="Superman"/>
+            <img id="superman" src="images/flying-super-man.png" alt="Superman"/>
             <div id="instructions">
                 <h2>Instructions</h2>
                 <p>Use arrows or (WASD) to move Superman and dodge the kryptonite. <br>
@@ -30,7 +30,7 @@
                 <button id="restart-button" class='btn btn-secondary m-2'>Restart</button>
             </div>
             </div>
-            <img id="lex" src="./images/Lex.png" alt="Lex Luthor"/>
+            <img id="lex" src="images/Lex.png" alt="Lex Luthor"/>
     </main>
 
     
