--- a/gameover.html
+++ b/gameover.html
@@ -20,7 +20,7 @@
     </div> -->
 
     <main id="main-container">
-            <img id="superman" src="./images/flying-super-man.png" alt="Superman"/>
+            <img id="superman" src="images/flying-super-man.png" alt="Superman"/>
             <div id="buttons">
                 <button id="playAgain" class='btn btn-secondary m-5 p-3'>Play Again?</button>
             </div>
@@ -33,7 +33,7 @@
                 <li></li>
             </ul>
         
-            <!-- <img id="lex" src="./images/Lex.png" alt="Lex Luthor"/> -->
+            <!-- <img id="lex" src="images/Lex.png" alt="Lex Luthor"/> -->
     </main>
 
     
