--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                 </div>
 
             </div>
-            <img id="lex" src="./images/Lex.png" alt="Lex Luthor"/>
+            <img id="lex" src="images/Lex.png" alt="Lex Luthor"/>
     </main>
 
     
