Code cleaning / refactor

--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@
 <body>
 
     <h1>Superman</h1>
-        <img id ='logo' src="./images/superman-logo.png" alt="Superman Logo">
+        <img id ='logo' src="images/superman-logo.png" alt="Superman Logo">
 
     <main id="main-container">
-            <img id="superman" src="./images/flying-super-man.png" alt="Superman"/>
+            <img id="superman" src="images/flying-super-man.png" alt="Superman"/>
             <div id="instructions">
                 <h2>Instructions</h2>
                 <p>Use arrows or (WASD) to move Superman and dodge the kryptonite. <br>
