--- a/gameover.html
+++ b/gameover.html
@@ -6,6 +6,7 @@
     <title>Superman</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
     <link rel="stylesheet" href="style.css">
+    <link rel="superman icon" type="image/x-icon" href="/images/favicon.ico"/>
 </head>
 <body>
 
