--- a/game.html
+++ b/game.html
@@ -47,6 +47,7 @@
     <script type="text/javascript" src="./scripts/clouds.js"></script>
     <script type="text/javascript" src="./scripts/bonus.js"></script>
     <script type="text/javascript" src="./scripts/heart.js"></script>
+    <script type="text/javascript" src="./scripts/projectile.js"></script>
 
 
 
