--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 
                 <div class="input-container">
                     <label for="name" >Name: </label>
-                    <input type="text" id="name" maxlength="24">
+                    <input type="text" id="name" maxlength="24" placeholder= "Enter Name">
                     <div id="buttons">
                         <button id="start-button" class='btn btn-secondary m-2'>Start Game</button>
                     </div>                  
