Minor gameplay change / fixed heart sound issue

--- a/game.html
+++ b/game.html
@@ -23,8 +23,9 @@
                 <h2>Instructions</h2>
                 <p>Use arrows or (WASD) to move Superman and dodge the kryptonite. <br>
                     Space bar to teleport forward! <br>
+                    1 point is awarded for each kryptonite avoided. <br>
+                    Capture Lex Luthor for 10 bonus points. <br>
                     Collect hearts for extra lives.<br>
-                Capture Lex Luthor for a bonus. <br>
                 </p>
                 <div id="buttons">
                 <button id="pause" class='btn btn-secondary m-2'>Pause</button>
