Major style update.  Need to clean code.

--- a/index.html
+++ b/index.html
@@ -10,23 +10,30 @@
 </head>
 <body>
 
-    <h1>Superman</h1>
-        <img id ='logo' src="images/superman-logo.png" alt="Superman Logo">
+    <img id ='writting-logo' src="images/Superman Name Logo done with PhotoShop.png" alt="Superman Written Logo">
+    
+    <!-- <img id ='logo' src="images/superman-logo.png" alt="Superman Logo"> -->
 
     <main id="main-container">
             <img id="superman" src="images/flying-super-man.png" alt="Superman"/>
             <div id="instructions">
-                <h2>Instructions</h2>
-                <p>Use arrows or (WASD) to move Superman and dodge the kryptonite. <br>
+                <!-- <h2>Instructions</h2> -->
+                <p>USE ARROWS TO AVOID THE KRYPTONITE<br><br>
+                    SPACE BAR TO TELEPORT FORWARD!<br>
+                    AVOID KRYPTONITE FOR POINTS<br>
+                    CAPTURE LEX LUTHER FOR 10 POINTS<br>
+                    COLLECT HEARTS FOR EXTRA LIVES<br>
+                </p>
+                <!-- <p>Use arrows to dodge the kryptonite. <br>
                     Space bar to teleport forward! <br>
-                    1 point is awarded for each kryptonite avoided. <br>
+                    Avoid kryptonite for 1 point <br>
                     Capture Lex Luthor for 10 bonus points. <br>
                     Collect hearts for extra lives.<br>
-                </p>
+                </p> -->
 
                 <div class="input-container">
-                    <label for="name" >Name: </label>
-                    <input type="text" id="name" maxlength="24" placeholder= "Enter Name">
+                    <!-- <label for="name" >Name: </label> -->
+                    <input type="text" id="name" maxlength="24" placeholder= "Enter Name" style="text-align: center;">
                     <div id="buttons">
                         <button id="start-button" class='btn btn-secondary m-2'>Start Game</button>
                     </div>                  
